# ENN554-assignment1

./: .gitignore  .gitmodules  README.md  pyproject.toml
ass1/: __init__.py  config.py  loaders.py  plots.py  run.py
ass1/modeling/: farm.py  financial.py  loaders.py  location.py  microgrid.py  turbine.py
data/: load_project_2026-1.xlsx  nasa_2023.csv  nasa_tmy.csv
data/turbine_data/: data_source.txt
notebooks/: nb1_wind_resource_analysis.ipynb  nb2_turbines.ipynb  nb3_lcoe_results.ipynb  nb4_load_assessment.ipynb
output/farm/: mg_comparison.csv
output/farm/16/: layout.json
output/farm/25/: layout.json
output/farm/9/: layout.json
output/turbines/: .~lock.comparison.csv#  .~lock.details.csv#  comparison.csv  details.csv
