[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "ass1"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
dependencies = [
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
    "ipykernel (>=7.2.0,<8.0.0)",
    "enn554 @ file:enn554",
    "polars (>=1.39.3,<2.0.0)",
    "plotly (>=6.6.0,<7.0.0)",
    "py-wake (>=2.6.20,<3.0.0)",
    "pypsa (>=1.1.2,<2.0.0)",
]
requires-python = "~=3.12.0"

[tool.ruff]
line-length = 99
src = ["ass1"]
include = ["pyproject.toml", "ass1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ass1"]
force-sort-within-sections = true

[tool.poetry]
packages = [
    { include = "ass1" }
]

[tool.poetry.dependencies]
enn554 = {develop = true}

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]
